# MetaMuse

./: .bash_history  .gitattributes  .gitignore  Age.txt  NORMALIZATION_PARALLELIZATION_ANALYSIS.md  README.md  abstract_output.txt  analyze_stochastic_behavior.py  debug_test.py  detailed_test_output.txt  evaluate_results.py  main.py  ols_map.py  output.txt  output_ols.txt  output_ols2.txt  pyproject.toml  requirements.txt  run_agent.py  setup.py  simplified_test_output.txt  test_abstract.py  test_agent.py  test_agent_output.txt  test_curator_output_changes.py  test_error_tracking.py  test_geo_functions.py  test_hybrid_debug.py  test_launcher.py  test_primary_sample_boolean.py
DendroForge-main/: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
DendroForge-main/benchmarking/: README_BIXBENCH.md  bixbench.py  config_all_gemini.yaml  config_rnaseq_gemini.yaml  config_rnaseq_sonnet.yaml
DendroForge-main/docs/V0/: diagram_V0.drawio  system_design.md
DendroForge-main/docs/V1/: diagram_V1.drawio
DendroForge-main/integrationtests/: __init__.py  test_ensembl_integration.py  test_pdb_integration.py  test_pubchem_integration.py  test_pubmed_integration.py
DendroForge-main/src/agents/: __init__.py  coding.py  coding_planning.py  data_discovery.py  planning.py  qa.py  report_agent.py  tool_utils.py
DendroForge-main/src/prompts/: coding_agent.md  coding_planning_agent.md  data_discovery_agent.md  global.md  planning_agent.md  qa_agent.md  report_agent.md
DendroForge-main/src/tools/: __init__.py  enhanced_fulltext.py  ensembl_rest_client.py  file_ops.py  genomics_biomni.py  move_file.py  pdb_query.py  pubchem_client.py  pubmed_search.py  shell.py  tool_creation_prompt.txt
DendroForge-main/src/utils/: prompts.py
DendroForge-main/src/workflows/: orchestrator.py  standard_pipeline.py
DendroForge-main/unittests/: README.md  __init__.py  test_ensembl_api.py  test_file_ops.py  test_move_file.py  test_pdb_query.py  test_pubchem_client.py  test_pubmed_search.py  test_shell.py
archs4_samples/: archs4_gsm_ids.txt
data/pubmed/: pubmed.sqlite
data/samples/: archs4_gse_ids.txt  archs4_pubmed_ids.txt
integrationtests/: test_curator_integration.py  test_linker_integration.py  test_normalizer_integration.py  test_workflow_compatibility.py
src/: metamuse_cli.py  sample_paths.py  setup_data.py
src/agents/: Arbitrator.py  __init__.py  curator.py  geo_ingestion.py  handoff_base.py  ingestion.py  linker.py  normalizer.py  tool_utils.py
src/evaluation/: README.md  __init__.py  curation_models.py  curation_prompts.py  evaluate_curation.py  evaluate_normalization.py  gemini_client.py  generate_errors_report.py  loader.py  normalization_models.py  normalization_prompts.py  renderer.py
src/models/: __init__.py  agent_outputs.py  common.py  curation_models.py  metadata_models.py  normalization_models.py  (+2 more)
unittests/: conftest.py  test_curator_tools.py  test_extract_geo_metadata.py  test_linker_tools.py  test_normalizer_tools.py  test_primary_sample.py
(+81 files in other folders)
