[project]
name = "MetaMuse"
version = "0.1.0"
description = "Agentic Metadata Curation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.4",
    "archs4py>=0.1.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "geoparse>=2.0.4",
    "h5py>=3.14.0",
    "huggingface-hub>=0.33.2",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "openai-agents[viz]>=0.1.0",
    "pandas>=2.3.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "faiss-cpu>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["unittests"]

[tool.pyright]
include = [
    "src",
    "unittests",
]
exclude = [
    "bixbench",
]

# Set the type-checking mode to "basic" (less strict than "strict").
# This helps reduce false-positive diagnostics when the codebase is not fully type-annotated.
typeCheckingMode = "off"

# Disable the specific diagnostic that flags passing ``None`` to parameters
# declared as ``str`` (or other incompatible argument type issues).
# Accepted values: "error", "warning", "information", "none".
reportArgumentType = "none"

# Target the project's Python interpreter version explicitly so that
# the type checker understands the available standard-library features.
pythonVersion = "3.12"



