[project]
name = "dendroforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.4",
    "beautifulsoup4>=4.13.4",
    "biopython>=1.85",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "huggingface-hub>=0.33.2",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "lxml>=6.0.0",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "openai-agents[viz]>=0.1.0",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[tool.pyright]
include = [
    "src",
    "unittests",
]
exclude = [
    "bixbench",
]

# Set the type-checking mode to "basic" (less strict than "strict").
# This helps reduce false-positive diagnostics when the codebase is not fully type-annotated.
typeCheckingMode = "off"

# Disable the specific diagnostic that flags passing ``None`` to parameters
# declared as ``str`` (or other incompatible argument type issues).
# Accepted values: "error", "warning", "information", "none".
reportArgumentType = "none"

# Target the project's Python interpreter version explicitly so that
# the type checker understands the available standard-library features.
pythonVersion = "3.12"

